--- a/html/about.html
+++ b/html/about.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>5tudy</title>
     <link rel="stylesheet" href="/css/default.css">
     <link rel="stylesheet" href="/css/about.css">
 </head>
 
 <style>
     .banner {
-        background-image: url("/img/about.webP");
+        background-image: linear-gradient( rgba(100, 100, 100, 0.1), rgba(100, 100, 100, 0.1)), url("/img/about.webP");
     }
 </style>
 
@@ -30,8 +30,14 @@
         <p>ABOUT</p>
     </div>
     <section>
-
+        <div class="blank"></div>
     </section>
+    <footer>
+        <p class="project">5tudy</p>
+        <p class="name">made by choi2j</p>
+        <p class="contact">https://github.com/choi2j</p>
+        <p class="contact">@choi2j86</p>
+    </footer>
 </body>
 
 </html>
