--- a/html/utility.html
+++ b/html/utility.html
@@ -6,10 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/default.css">
+    <link rel="stylesheet" href="/css/about.css">
 </head>
 
-<body>
+<style>
+    .banner {
+        background-image: linear-gradient( rgba(100, 100, 100, 0.1), rgba(100, 100, 100, 0.1)), url("/img/utility.webP");
+    }
+</style>
 
+<body>
+    <header>
+        <a class="head" href="/index.html">5tudy</a>
+    </header>
+    <nav>
+        <a class="nav-button" href="/html/about.html">about</a>
+        <a class="nav-button" href="/html/app.html">app</a>
+        <a class="nav-button" href="/html/book.html">book</a>
+        <a class="nav-button" href="/html/utility.html">utility</a>
+    </nav>
+    <div class="banner">
+        <p>UTILITY</p>
+    </div>
+    <section>
+        <div class="blank"></div>
+    </section>
+    <footer>
+        <p class="project">5tudy</p>
+        <p class="name">made by choi2j</p>
+        <p class="contact">https://github.com/choi2j</p>
+        <p class="contact">@choi2j86</p>
+    </footer>
 </body>
 
 </html>
