--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>5tudy</title>
     <link rel="stylesheet" href="/css/index.css">
 </head>
 
 <body>
-
+    <section>
+        <div class="intro">
+            5tudy에 오신 것을 환영합니다!
+            <p>5tudy는 당신의 공부를 돕기위해</p>
+            <p>앱 또는 도서 등을 5가지씩 정리해놓은 사이트입니다!</p>
+            <p>5tudy와 함께 성적 향상을 위해 노력해보자고요!</p>
+            <br>
+            <a href="../html/about.html">사이트 바로가기</a>
+        </div>
+    </section>
 </body>
 
 </html>
