--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <section>
         <div class="intro">
-            5tudy에 오신 것을 환영합니다!
+            <span>5tudy에 오신 것을 환영합니다!</span>
             <p>5tudy는 당신의 공부를 돕기위해</p>
             <p>앱 또는 도서 등을 5가지씩 정리해놓은 사이트입니다!</p>
             <p>5tudy와 함께 성적 향상을 위해 노력해보자고요!</p>
