--- a/html/about.html
+++ b/html/about.html
@@ -31,6 +31,8 @@
     </div>
     <section>
         <div class="blank"></div>
+        <h1>Comming soon!</h1>
+        <div class="blank"></div>
     </section>
     <footer>
         <p class="project">5tudy</p>
