--- a/html/about.html
+++ b/html/about.html
@@ -30,9 +30,41 @@
         <p>ABOUT</p>
     </div>
     <section>
-        <div class="blank"></div>
-        <h1>Comming soon!</h1>
-        <div class="blank"></div>
+        <div class="container">
+            <div class="main">
+                <p class="title">Profile</p>
+                <p class="subtitle">choi2j</p>
+            </div>
+            <div class="content">
+                <p class="title">Introduction</p>
+                <p class="description">Hello, my name is choi2j. I'm a highschool student in SRHIS.</p>
+                <p class="description">My designs and layouts in making websites are terrible.</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="main">
+                <p class="title">5tudy</p>
+                <p class="subtitle">wtf</p>
+            </div>
+            <div class="content">
+                <p class="title">How it started</p>
+                <p class="description">It "was" a portfolio, but I got interested of remaking the whole thing.</p>
+                <p class="description">So, I restarted from scratch and still trying to make it better that before.</p>
+                <br>
+                <p class="title">5tudy is...</p>
+                <p class="description">5tudy is a study helper that helps you to find apps, books and other things that can help you with your study.</p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="main">
+                <p class="title">Utilities</p>
+                <p class="subtitle">not skilled enough</p>
+            </div>
+            <div class="content">
+                <p class="title">Utilities</p>
+                <p class="description">Since I'm stupid, I can't make any utilities by myself. I'll come back later with some stuffs.</p>
+            </div>
+        </div>
     </section>
     <footer>
         <p class="project">5tudy</p>
