--- a/html/about.html
+++ b/html/about.html
@@ -21,7 +21,7 @@
         <a class="head" href="/index.html">5tudy</a>
     </header>
     <nav>
-        <a class="nav-button" href="/html/about.html">about</a>
+        <a class="nav-button" href="/html/about.html" style="font-weight: 700;color: black;">about</a>
         <a class="nav-button" href="/html/app.html">app</a>
         <a class="nav-button" href="/html/book.html">book</a>
         <a class="nav-button" href="/html/utility.html">utility</a>
