--- a/html/app.html
+++ b/html/app.html
@@ -22,7 +22,7 @@
     </header>
     <nav>
         <a class="nav-button" href="/html/about.html">about</a>
-        <a class="nav-button" href="/html/app.html">app</a>
+        <a class="nav-button" href="/html/app.html" style="font-weight: 700;color: black;">app</a>
         <a class="nav-button" href="/html/book.html">book</a>
         <a class="nav-button" href="/html/utility.html">utility</a>
     </nav>
