--- a/html/book.html
+++ b/html/book.html
@@ -23,7 +23,7 @@
     <nav>
         <a class="nav-button" href="/html/about.html">about</a>
         <a class="nav-button" href="/html/app.html">app</a>
-        <a class="nav-button" href="/html/book.html">book</a>
+        <a class="nav-button" href="/html/book.html" style="font-weight: 700;color: black;">book</a>
         <a class="nav-button" href="/html/utility.html">utility</a>
     </nav>
     <div class="banner">
