--- a/html/utility.html
+++ b/html/utility.html
@@ -24,7 +24,7 @@
         <a class="nav-button" href="/html/about.html">about</a>
         <a class="nav-button" href="/html/app.html">app</a>
         <a class="nav-button" href="/html/book.html">book</a>
-        <a class="nav-button" href="/html/utility.html">utility</a>
+        <a class="nav-button" href="/html/utility.html" style="font-weight: 700;color: black;">utility</a>
     </nav>
     <div class="banner">
         <p>UTILITY</p>
