--- a/html/about.html
+++ b/html/about.html
@@ -39,6 +39,7 @@
                 <p class="title">Introduction</p>
                 <p class="description">Hello, my name is choi2j. I'm a highschool student in SRHIS.</p>
                 <p class="description">My designs and layouts in making websites are terrible.</p>
+                <p class="description">I'm a dumbass.</p>
             </div>
         </div>
         <div class="container">
