--- a/html/book.html
+++ b/html/book.html
@@ -37,8 +37,7 @@
     <footer>
         <p class="project">5tudy</p>
         <p class="name">made by choi2j</p>
-        <p class="contact">https://github.com/choi2j</p>
-        <p class="contact">@choi2j86</p>
+        <p class="contact">https://github.com/choi2j | @choi2j86</p>
     </footer>
 </body>
 
