--- a/html/about.html
+++ b/html/about.html
@@ -80,7 +80,7 @@
             </div>
             <div class="content">
                 <p class="title">Utilities</p>
-                <p class="description">Since I'm stupid, I can't make any utilities by myself. I'll come back later with some stuffs.</p>
+                <p class="description">I'm stupid.</p>
             </div>
         </div>
     </section>
