--- a/html/about.html
+++ b/html/about.html
@@ -66,8 +66,7 @@
             </div>
             <div class="content">
                 <p class="title">How it started</p>
-                <p class="description">It "was" a portfolio, but I got interested of remaking the whole thing.</p>
-                <p class="description">So, I restarted from scratch and still trying to make it better that before.</p>
+                <p class="description">I'm a dumbass.</p>
                 <br>
                 <p class="title">5tudy is...</p>
                 <p class="description">5tudy is a study helper that helps you to find apps, books and other things that can help you with your study.</p>
@@ -80,7 +79,7 @@
             </div>
             <div class="content">
                 <p class="title">Utilities</p>
-                <p class="description">I'm stupid.</p>
+                <p class="description">I'm a dumbass.</p>
             </div>
         </div>
     </section>
