--- a/html/app.html
+++ b/html/app.html
@@ -55,6 +55,7 @@
         <p class="project">5tudy</p>
         <p class="name">made by choi2j</p>
         <p class="contact">https://github.com/choi2j | @choi2j86</p>
+        <p class="used_components">all images from unsplash</p>
     </footer>
 </body>
 
